# DiskSage

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  components.json  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
docs/: architecture.md  ipc-contracts.md  limitations.md  release-checklist.md  releasing.md  safety-policy.md  test-strategy.md  threat-model.md
scripts/: build-pages.mjs  check-release.mjs
site/: 404.html  index.html  robots.txt  script.js  site.webmanifest  sitemap.xml  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  intelligence.rs  lib.rs  main.rs
src-tauri/src/applications/: coordinator.rs
src-tauri/src/cleanup/: coordinator.rs  mod.rs  permanent_executor.rs  revalidation.rs  trash_executor.rs
src-tauri/src/commands/: app.rs  applications.rs  cleanup.rs  diagnostics.rs  disk.rs  duplicates.rs  intelligence.rs  mod.rs  scan.rs  settings.rs
src-tauri/src/domain/: application.rs  cleanup.rs  diagnostics.rs  disk.rs  duplicate.rs  error.rs  finding.rs  intelligence.rs  mod.rs  rule.rs  scan.rs  settings.rs
src-tauri/src/duplicates/: cleanup.rs  coordinator.rs  hashing.rs  mod.rs  scanner.rs
src-tauri/src/observability/: logging.rs
src-tauri/src/persistence/: duplicates.rs  history.rs  mod.rs  scans.rs  settings.rs
src-tauri/src/platform/: disk_info.rs  file_manager.rs  filesystem.rs  mod.rs
src-tauri/src/rules/: mod.rs  project_detection.rs  registry.rs
src-tauri/src/rules/catalogs/: developer_tools.rs  mod.rs  project_artifacts.rs  safe_caches.rs
src-tauri/src/safety/: mod.rs  protected_paths.rs
src-tauri/src/scanner/: analysis.rs  cancellation.rs  coordinator.rs  exclusions.rs  mod.rs  walker.rs
(+64 files in other folders)
