[package]
name = "disksage"
version = "0.1.0"
description = "Local-first disk analysis with safety-first cleanup contracts"
authors = ["DiskSage contributors"]
edition = "2021"
rust-version = "1.88"
license = "MIT"

[lib]
name = "disksage_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
blake3 = "1.8.5"
chrono = { version = "0.4.39", features = ["serde"] }
plist = "1.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sysinfo = { version = "0.33.1", default-features = false, features = ["disk"] }
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
trash = "5.2.6"
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.14.0"
